11/5/2024: completely revamped system

11/19/2024: added conditions for movement
11/22/2024: added visibility controls for paths