@@ -1,1 +1,2 @@
-save.json
+.gitignore
+test.tasave
